# tree-trunk

./: README.md  pyproject.toml
plugins/tree-branch/: pyproject.toml
plugins/tree-branch/tree/branch/: main.py
plugins/tree-root/: README.md
tree/: __init__.py  hooks.py  leaf.py  trunk.py  twig.py
tree/trunk/: main.py
